# routes/category_routes.go
@@ -13,5 +13,10 @@ func CategoryRoutes(r *gin.RouterGroup, controller *controllers.CategoryControll
 	{
 		categories.POST("/default-cat-admin-only-wlee", controller.CreateDefaultCategories)
 		categories.GET("/", controller.GetAllCategories)
+
+		categories.POST("/mine", controller.CreateMy)
+		categories.GET("/mine", controller.GetMine)
+		categories.PATCH("/:id/update", controller.UpdateById)
+		categories.PATCH("/:id/delete", controller.DeleteById)
 	}
 }
